# bezav

./: .gitignore  README.md
src/: CMakeLists.txt  bezav.cpp  glad.c
src/include/: bezavCMakeConfig.h.in
src/shaders/: frag.frag  vert.vert
